# BLUE-invoice

./: README.md  pyproject.toml  setup.py
blue_invoice/: extract.py
invoice_format_extractor/: __init__.py  extract.py
